--- a/index.html
+++ b/index.html
@@ -165,7 +165,9 @@
     .radiobutton__input {
       position: absolute;
       inset: 0;
-      opacity: 0.1;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
       cursor: pointer;
       z-index: 2;
     }
@@ -207,7 +209,9 @@
     .checkbutton__input {
       position: absolute;
       inset: 0;
-      opacity: 0.1;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
       z-index: 2;
     }
 
