--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     }
 
     .board {
-      height: 100%;
+      max-height: 100%;
       display: block;
       margin-inline: auto;
       object-fit: contain;
