--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     @media (max-width: 66rem) {
       h1 {
-        font-size: 2rem;
+        font-size: 1.6rem;
         text-align: center;
       }
 
@@ -102,6 +102,7 @@
 
       .hero {
         grid-template-columns: 1fr;
+        margin-top: 2rem;
       }
     }
 
@@ -408,7 +409,7 @@
         </div>
       </div>
       <div class="hero__right">
-        <img src="https://s.iimg.su/s/21/uUblQHpYLh1YcYdjD5tLZr1TVNwBXfxNlz1iuFwe.png" alt="" class="board">
+        <img src="board.webp" alt="" class="board">
       </div>
     </section>
     <section class="section_gray">
