--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 
     .board {
       max-height: 100%;
+      max-width: 20rem;
       display: block;
       margin-inline: auto;
       object-fit: contain;
@@ -303,8 +304,8 @@
       <div class="hero__left">
         <h1 class="supertitle">Реклама у подъездов<br>г. о. Орехово-зуево</h1>
         <div class="contacts">
-          <a href="tel:+79060735131" class="contacts__item">+7 906 073-51-31</a>
-          <a href="tel:+79060735131" class="contacts__item">synchronizer@yandex.ru</a>
+          <a href="tel:+79060735131" class="contacts__item">+7 968 024-23-93</a>
+          <a href="tel:+79060735131" class="contacts__item">mail@mail.ru</a>
         </div>
         <div class="calc">
 
