--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
         grid-template-columns: 1fr;
         margin-top: 2rem;
       }
+      .board {
+        width: 50vh;
+      }
     }
 
     .hero__left {
@@ -119,8 +122,7 @@
     }
 
     .board {
-      max-height: 100%;
-      max-width: 20rem;
+      height: 100%;
       display: block;
       margin-inline: auto;
       object-fit: contain;
