--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Реклама на щитах у подъездов</title>
+  <title>Реклама на щитах у подъездов в городском округе Орехово-зуево</title>
+  <meta property="og:title"              content="Реклама на щитах у подъездов в городском округе Орехово-зуево" />
+  <meta property="og:description"        content="Размещение рекламы в населённых пункатах: Ликино-Дулёво, Куровское, Дрезна, Давыдово, Авсюнино, Губино, Новинка, Кабаново" />
+  <meta property="og:image"              content="thumbnail.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+
+
   <style id="jsbin-css">
     :root {
       --button-bg: #d5d8dc;
@@ -106,6 +112,7 @@
       }
       .board {
         width: 50vh;
+        height: auto;
       }
     }
 
