--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta property="og:title"              content="Реклама на щитах у подъездов в городском округе Орехово-зуево" />
   <meta property="og:description"        content="Размещение рекламы в населённых пункатах: Ликино-Дулёво, Куровское, Дрезна, Давыдово, Авсюнино, Губино, Новинка, Кабаново" />
   <meta property="og:image"              content="thumbnail.png" />
+  <meta name="twitter:card" content="summary_large_image" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
