--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@
       <div class="hero__left">
         <h1 class="supertitle">Реклама у подъездов<br>г. о. Орехово-зуево</h1>
         <div class="contacts">
-          <a href="tel:+79060735131" class="contacts__item">+7 968 024-23-93</a>
-          <a href="tel:+79060735131" class="contacts__item">mail@mail.ru</a>
+          <a href="tel:+79680242393" class="contacts__item">+7 968 024-23-93</a>
+          <a href="mailto:misonkova@mail.ru" class="contacts__item">Misonkova@mail.ru</a>
         </div>
         <div class="calc">
 
